# rhc

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE.md  bump.sh  references.txt
.github/workflows/: build-main.yml  bump-version.yml  publish.yml  release.yml  testing.yml
benches/: sha.rs  sha1.rs  sha2.rs
lib/: common.rs  lib.rs
lib/sha1/: consts.rs  mod.rs  sha_core.rs
lib/sha2/: consts.rs  mod.rs
rhc/: main.rs  rhc.rs
rhc-lib/: compression.rs  wrapper.rs
rhc-lib/sha2/: sha512_core.rs
rhc/central/: manager.rs
rhc/cli/: entry.rs
rhc/core/: dictionary.rs  incremental.rs  spawn.rs
rhc/error/: argument.rs  core.rs
rhc/settings/: dictionary.rs  incremental.rs  mod.rs  thread.rs  validator.rs
scripts/: bump.sh  concat_lists.py  it.sh
shaders/: test.comp
src/: algorithm.rs  config.rs  input.rs  main.rs  rhc.rs
src/algorithm/: compression.rs  mod.rs
src/central/: manager.rs  mod.rs  setup.rs  spawn.rs
src/cli/: arg.rs  argument.rs  argument_error.rs  cli.rs  entry.rs  flag.rs  mod.rs  settings.rs
src/core/: charset.rs  constants.rs  crack.rs  cracker.rs  dictionary.rs  hasher.rs  incremental.rs  mod.rs  package.rs  password_info.rs  result.rs  setup.rs  spawn.rs
src/depricated/: mod.rs  time.rs
src/error/: argument.rs  core.rs  mod.rs
src/settings/: mod.rs  settings.rs  thread.rs  unvalidated.rs  validator.rs
src/sha2/: base_256.rs  base_512.rs  bit_utils.rs  consts.rs  implementation.rs  mod.rs  sha256.rs  sha256_core.rs  sha512_core.rs  sha_wrapper.rs  testing.rs  wrapper.rs
src/systems/: config.rs  cracker.rs  hasher.rs  (+7 more)
(+58 files in other folders)
