[package]
name = "rhc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# password-hash = "0.4.2"
# sha2 = "0.10.2"
# lazy_static = "1.4.0"
# clap = { version = "4.0.23", features = ["derive"] }
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"