[package]
name = "rhc"
version = "0.20.1"
edition = "2021"

[[bin]]
name = "rhc"
path = "rhc/main.rs"
test = true   

[lib]
name = "hash"
test = true
path = "rhc-lib/lib.rs"

[dependencies]
regex = "1"
phf = { version = "0.11", features = ["macros"] }
num_cpus = "1.15.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "3.0.1"
criterion = "0.4.0"

[[bench]]
name = "sha"
harness = false