[package]
name = "rhc"
version = "0.21.1"
edition = "2021"

[[bin]]
name = "rhc"
path = "rhc/main.rs"
test = true   

[lib]
name = "hash"
test = true
path = "lib/lib.rs"

[dependencies]
regex = "1"
phf = { version = "0.11", features = ["macros"] }
num_cpus = "1.15.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "3.0.1"
criterion = "0.4.0"

[[bench]]
name = "sha1"
harness = false

[[bench]]
name = "sha2"
harness = false